[package]
name = "apexchainx_calculator"
version = "0.1.0"
edition.workspace = true
description = "Soroban SLA calculator contract for the ApexChainx system"
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
