[package]
name = "apexchainx_calculator"
version = "0.1.0"
edition = "2021"
description = "Soroban SLA calculator contract for the ApexChainx system"
license = "MIT"
repository = "https://github.com/ApexChainx/ApexChainx-Contracts"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Issue #98: opt-in structured tracing for the test harness. Builds the
# `trace` module (stdlib-backed, host-only) and wires `trace::record_*`
# calls into the contract public methods. Enable with
# `cargo test --features debug-trace` to exercise the trace API.
debug-trace = []

[dependencies]
soroban-sdk = { version = "21.1.0", features = ["alloc"] }

[dev-dependencies]
proptest = "1.5.0"
soroban-sdk = { version = "21.1.0", features = ["testutils", "alloc"] }

